name:                Pastor
version:             0.1.0.0
synopsis:            Simple pastebin application to test Servant.
description:         Please see README.md
homepage:            http://github.com/Chobbes/Pastor#readme
license:             MIT
license-file:        LICENSE
author:              Calvin Beck
maintainer:          hobbes@ualberta.ca
copyright:           2015 Calvin Beck
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Pastor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , servant-server >= 0.4.4.5 && < 0.4.5
                     , servant-lucid >= 0.4.4.5 && < 0.4.5
                     , servant-jquery >= 0.4.4.5 && < 0.4.5
                     , wai >= 3.0.4.0 && < 3.1
                     , warp >= 3.1.8 && < 3.2
                     , text >= 1.2.1.3 && < 1.3
                     , aeson >= 0.10.0.0 && < 0.11
                     , lucid >= 2.9.3 && < 3
                     , mtl >= 2.2.1 && < 2.3
                     , either >= 4.4.1 && < 4.5
                     , acid-state >= 0.13.1 && < 0.14
                     , safecopy >= 0.8.5 && < 0.9
                     , js-jquery >= 1.11.3 && < 1.12
                     , containers >= 0.5.6.2 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Chobbes/Pastor
